// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/presenters/IndicatorPresenter renders with all props 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-1 {
  border: 2px solid transparent;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  box-shadow: none;
  background-color: transparent;
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
  pointer-events: none;
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 13px;
  padding: 0 3px;
  font-size: 11px;
  line-height: 13px;
  border: 1px solid #ffffff;
  color: #ffffff;
  background-color: #0696d7;
  border-radius: 4px;
  pointer-events: none;
  font-weight: 400;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  display: block;
}

<div
  className="emotion-3"
>
  <button
    className="emotion-1"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    title="hello world"
  >
    <svg
      className="emotion-0"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        notification-24
      </title>
      <path
        d="M18 14.54V10a6 6 0 0 0-4-5.65V2h-4v2.35A6 6 0 0 0 6 10v4.54A5.4 5.4 0 0 0 3 19h6a3 3 0 0 0 6 0h6a5.4 5.4 0 0 0-3-4.46zM12 21a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2zm-7.83-3a5.1 5.1 0 0 1 2.34-2.6l.49-.3V10a5 5 0 0 1 3.33-4.71l.67-.23V3h2v2.06l.67.23A5 5 0 0 1 17 10v5.1l.49.3a5.1 5.1 0 0 1 2.34 2.6z"
      />
    </svg>
  </button>
  <div
    className="emotion-2"
  >
    3
  </div>
</div>
`;

exports[`notifications-flyout/presenters/IndicatorPresenter renders without props 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 13px;
  padding: 0 3px;
  font-size: 11px;
  line-height: 13px;
  border: 1px solid #ffffff;
  color: #ffffff;
  background-color: #0696d7;
  border-radius: 4px;
  pointer-events: none;
  font-weight: 400;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  display: none;
}

.emotion-1 {
  border: 2px solid transparent;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1),cubic-bezier(0.4,0,0.2,1);
  box-shadow: none;
  background-color: transparent;
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
  pointer-events: none;
}

<div
  className="emotion-3"
>
  <button
    className="emotion-1"
    onBlur={[Function]}
    onClick={undefined}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    title="View notifications"
  >
    <svg
      className="emotion-0"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        notification-24
      </title>
      <path
        d="M18 14.54V10a6 6 0 0 0-4-5.65V2h-4v2.35A6 6 0 0 0 6 10v4.54A5.4 5.4 0 0 0 3 19h6a3 3 0 0 0 6 0h6a5.4 5.4 0 0 0-3-4.46zM12 21a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2zm-7.83-3a5.1 5.1 0 0 1 2.34-2.6l.49-.3V10a5 5 0 0 1 3.33-4.71l.67-.23V3h2v2.06l.67.23A5 5 0 0 1 17 10v5.1l.49.3a5.1 5.1 0 0 1 2.34 2.6z"
      />
    </svg>
  </button>
  <div
    className="emotion-2"
  />
</div>
`;
